--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -76,24 +76,26 @@ jobs:
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/go-web-app:${{github.run_id}}
 
   update-newtag-in-helm-chart:
-    runs-on: ubuntu-latest
+  runs-on: ubuntu-latest
 
-    needs: push
+  needs: push
 
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-      with:
-        token: ${{ secrets.TOKEN }}
+  steps:
+  - name: Checkout repository
+    uses: actions/checkout@v4
+    with:
+      token: ${{ secrets.TOKEN }}
+      fetch-depth: 0  # Fetch all history to ensure proper merging
 
-    - name: Update tag in Helm chart
-      run: |
-        sed -i 's/tag: .*/tag: "${{github.run_id}}"/' helm/go-web-app-chart/values.yaml
+  - name: Update tag in Helm chart
+    run: |
+      sed -i 's/tag: .*/tag: "${{github.run_id}}"/' helm/go-web-app-chart/values.yaml
 
-    - name: Commit and push changes
-      run: |
-        git config --global user.email "asmita.parmar04@gmail.com"
-        git config --global user.name "Asmita Parmar"
-        git add helm/go-web-app-chart/values.yaml
-        git commit -m "Update tag in Helm chart"
-        git push
+  - name: Commit and push changes
+    run: |
+      git config --global user.email "asmita.parmar04@gmail.com"
+      git config --global user.name "Asmita Parmar"
+      git pull origin main  # Pull latest changes first
+      git add helm/go-web-app-chart/values.yaml
+      git commit -m "Update tag in Helm chart"
+      git push
