--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -85,7 +85,6 @@ jobs:
       uses: actions/checkout@v4
       with:
         token: ${{ secrets.TOKEN }}
-        fetch-depth: 0  # Fetch all history to ensure proper merging
 
     - name: Update tag in Helm chart
       run: |
@@ -93,9 +92,8 @@ jobs:
 
     - name: Commit and push changes
       run: |
-        git config --global user.email "asmita.parmar04@gmail.com"
-        git config --global user.name "Asmita Parmar"
-        git pull origin main  # Pull latest changes first
+        git config --global user.email "abhishek@gmail.com"
+        git config --global user.name "Abhishek Veeramalla"
         git add helm/go-web-app-chart/values.yaml
         git commit -m "Update tag in Helm chart"
         git push
