feat: implemented CI

--- a/helm/go-web-app-chart/values.yaml
+++ b/helm/go-web-app-chart/values.yaml
@@ -5,10 +5,10 @@
 replicaCount: 1
 
 image:
-  repository: asmita1750/go-web-app
+  repository: asmitaparmar05/go-web-app
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "14010109689"
+  tag: "v1"
 
 ingress:
   enabled: false
