--- a/k8s/manifests/deployment.yaml
+++ b/k8s/manifests/deployment.yaml
@@ -17,6 +17,6 @@ spec:
     spec:
       containers:
       - name: go-web-app
-        image: asmita1750/go-web-app:v1
+        image: asmitaparmar05/go-web-app:v1
         ports:
         - containerPort: 8080
